--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="flex items-center" style='gap: 0.5rem'>
                 <div class="link-icon">
-                  <a class="text-underline text-theme-hover"  href="/cv.html">경력 기술서</a>
+                  <a class="text-underline text-theme-hover"  href="./cv.html">경력 기술서</a>
                 </div>
                 <div class="link-icon">
                   <a class="text-underline text-theme-hover" href="https://teklog.site" target="_blank">기술블로그</a>
