fix: 타이틀 수정

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             align-items:start;
         ">
         <div class="title">
-          <div class="flex items-center" style='gap: 0.5rem'>
+          <div class="flex items-center resume-title-flex" style='gap: 0.5rem'>
             <h1 class="dev-title">Frontend DEV</h1>
             <h1>이택우 이력서</h1>
           </div>
