fix: meta og tag, favicon 수정

--- a/cv.html
+++ b/cv.html
@@ -7,17 +7,12 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="description" content="">
 
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+    <meta property="og:title" content="Frontend DEV. 이택우 경력기술서">
+    <meta property="og:url" content="https://0teklee.github.io/resume/cv">
+    <meta property="og:image" content="https://res.cloudinary.com/dolziw8fv/image/upload/v1663058798/logo_ktizgo.jpg">
 
     <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="icon.png">
-
-    <link rel="manifest" href="site.webmanifest">
-    <meta name="theme-color" content="#fafafa">
+    <meta name="theme-color" content="#0A98FF">
   </head>
   <body>
     <div class="page-container flex flex-col" style="gap: 4rem;">
@@ -53,7 +48,7 @@
         </div>
           <div class="flex items-center" style='gap: 0.5rem'>
             <div class="link-icon">
-              <a class="text-underline text-theme-hover"  href="/index.html">이력서</a>
+              <a class="text-underline text-theme-hover"  href="./index.html">이력서</a>
             </div>
             <div class="link-icon">
               <a class="text-underline text-theme-hover" href="https://teklog.site" target="_blank">기술블로그</a>
