--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
     </style>
 
     <meta property="og:title" content="Frontend DEV. 이택우 이력서">
-    <meta property="og:type" content="">
     <meta property="og:url" content="https://0teklee.github.io/resume">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://res.cloudinary.com/dolziw8fv/image/upload/v1663058798/logo_ktizgo.jpg">
 
     <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="icon.png">
-
     <link rel="manifest" href="site.webmanifest">
-    <meta name="theme-color" content="#fafafa">
+    <meta name="theme-color" content="#0A98FF">
   </head>
   <body>
     <div class="page-container flex flex-col" style="gap: 4rem;">
