--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <style>
 
     </style>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
     <meta property="og:title" content="Frontend DEV. 이택우 이력서">
     <meta property="og:url" content="https://0teklee.github.io/resume">
     <meta property="og:image" content="https://res.cloudinary.com/dolziw8fv/image/upload/v1663058798/logo_ktizgo.jpg">
@@ -235,9 +237,9 @@
           </article>
         </div>
         <div class="flex flex-col jd-section-gap">
-        <h2 class="circle-highlight">개인 프로젝트</h2>
+        <h2 class="circle-highlight section-title">개인 프로젝트</h2>
           <div class="jd-container jd-section-gap">
-            <aside class="flex flex-col items-start flex-shrink-none" style="gap: 8px;">
+            <aside class="side-project-responsive flex flex-col items-start flex-shrink-none" style="gap: 8px;">
               <p>2022.06 ~ 2022.08</p>
               <div class="flex flex-col" style="gap:0.5rem">
                 <a
@@ -289,7 +291,7 @@
             </article>
           </div>
           <div class="jd-container jd-section-gap">
-            <aside class="flex flex-col items-start flex-shrink-none" style="gap: 8px;">
+            <aside class="flex flex-col items-start flex-shrink-none side-project-responsive" style="gap: 8px;">
               <p>2022.06 ~ 2022.08</p>
               <div class="flex flex-col" style="gap:0.5rem">
                 <a
@@ -310,8 +312,7 @@
               <div class="flex flex-col w-full" style="gap:0.4rem">
                 <section class="flex flex-col w-full" style="gap: 1rem;">
                   <p style="text-indent: 1rem;">
-                    플레이리스트를 공유하는 소셜 웹앱을 개발했습니다. 유저들이 <b>플레이리스트를 만들고, 공유하며, 음악을 재생</b>하도록 설계했습니다.
-                  </p>
+                    <b>CRUD가 가능한 기술 블로그</b>를 개발하였습니다. 배포 이후에도 공부한 내용을 업로드하고, 리팩터링을 지속하고 있습니다.                  </p>
                   <div class="tech-stack">
                     <p class="flex-shrink-none" style="font-weight: 600">사용기술</p>
                     <p>
