fix: 개인 프로젝트 사이트 링크 href 수정

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
               <p>2022.06 ~ 2022.08</p>
               <div class="flex flex-col" style="gap:0.5rem">
                 <a
-                  href="https://www.soullink.cc"
+                  href="https://soullink.cc"
                   target="_blank"
                   class="external-link-icon-before text-underline cursor-pointer text-theme-hover">사이트 링크</a>
                 <a
