fix: 오탈자 수정

--- a/cv.html
+++ b/cv.html
@@ -89,7 +89,7 @@
                 <span class="text-sub">2023.04 ~ current</span>
               </div>
               <ul>
-                <li>고정 수익형 펀트 상품 </li>
+                <li>고정 수익형 펀드 상품 UX 기획단계 참여 및 신규 개발</li>
                 <li>3가지(Quant, Spot, Earn) <b>펀드 상품 결제 기능 및 UI 공용 컴포넌트</b> 개발
                   <ul>
                     <li><b>문제 진단:</b> 기존 펀드 결제 input 컴포넌트 UX의 문제점들을 진단하여 문서화. 이후 기획자 및 디자이너와 논의한 뒤 사업팀에 전달하여 UX 정책 수정</li>
