--- a/cv.html
+++ b/cv.html
@@ -56,6 +56,9 @@
             <div class="link-icon">
               <a class="text-underline text-theme-hover" href="https://github.com/0teklee" target="_blank">깃허브</a>
             </div>
+            <div class="link-icon">
+              <a class="text-underline text-theme-hover" href="https://leetekwoo-portfolio.vercel.app/" target="_blank">포트폴리오</a>
+            </div>
           </div>
         </div>
       </header>
