fix: flex-wrap applied

--- a/cv.html
+++ b/cv.html
@@ -46,7 +46,7 @@
             <p>+821035171584</p>
           </div>
         </div>
-          <div class="flex items-center" style='gap: 0.5rem'>
+          <div class="flex items-center flex-wrap" style='gap: 0.5rem'>
             <div class="link-icon">
               <a class="text-underline text-theme-hover"  href="./index.html">이력서</a>
             </div>
