--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>+821035171584</p>
               </div>
             </div>
-            <div class="flex items-center" style='gap: 0.5rem'>
+            <div class="flex items-center flex-wrap" style='gap: 0.5rem'>
                 <div class="link-icon">
                   <a class="text-underline text-theme-hover"  href="./cv.html">경력 기술서</a>
                 </div>
