fix: vercel app link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   <a class="text-underline text-theme-hover" href="https://github.com/0teklee" target="_blank">깃허브</a>
                 </div>
               <div class="link-icon">
-                <a class="text-underline text-theme-hover" href="https://leetekwoo-portfolio.vercel.app/" target="_blank">포트폴리오</a>
+                <a class="text-underline text-theme-hover" href="https://https://www.leetekwoo-portfolio.site/" target="_blank">포트폴리오</a>
               </div>
               </div>
             </div>
