--- a/cv.html
+++ b/cv.html
@@ -37,6 +37,10 @@
           style="gap:12px"
         >
         <div>
+          <div class="flex items-center" style='gap: 0.5rem; margin-bottom: 1rem;'>
+            <h2 class="text-theme">KR</h2>
+            <a href="./en/cv.html"><h2>EN</h2></a>
+          </div>
           <div class="flex items-center" style='gap: 0.5rem'>
             <p style="font-weight: bold;">이메일:</p>
             <p>leetekwoo@gmail.com</p>
