--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         >
           <div class="flex flex-col" style="gap:0.4rem">
             <div>
+              <div class="flex items-center" style='gap: 0.5rem; margin-bottom: 1rem;'>
+                <h2 class="text-theme">KR</h2>
+                <a href="./en/index.html"><h2>EN</h2></a>
+              </div>
               <div class="flex items-center" style='gap: 0.5rem'>
                 <p style="font-weight: bold;">이메일:</p>
                 <p>leetekwoo@gmail.com</p>
