fix: portfolio link

--- a/en/cv.html
+++ b/en/cv.html
@@ -61,7 +61,7 @@
           <a class="text-underline text-theme-hover" href="https://github.com/0teklee" target="_blank">Github</a>
         </div>
         <div class="link-icon">
-          <a class="text-underline text-theme-hover" href="https://https://www.leetekwoo-portfolio.site/" target="_blank">Portfolio</a>
+          <a class="text-underline text-theme-hover" href="https://www.leetekwoo-portfolio.site/" target="_blank">Portfolio</a>
         </div>
       </div>
     </div>
